@@ -12,6 +12,8 @@ Post-v2.5.0
        Old 'other_config:n-dpdk-rxqs' is no longer supported.
    - ovs-benchmark: This utility has been removed due to lack of use and
      bitrot.
+   - ovs-appctl:
+     * New "vlog/close" command.
 
 
 v2.5.0 - xx xxx xxxx
